--- a/music-site/values.yaml
+++ b/music-site/values.yaml
@@ -1,14 +1,14 @@
 namespace: music-site
 mongodb:
   image:
-    repository: mongo # Use the official MongoDB image
-    tag: "1.0.13"
+    repository: mongo
+    tag: "6.0" # Updated to a valid MongoDB version
   replicas: 1
   storage:
     size: 5Gi
 app:
   image:
-    repository: cheffen/music-site # Your application image repository
-    tag: "1.0.13"
+    repository: cheffen/music-site
+    tag: "1.0.13" # Application image tag remains unchanged
   replicas: 2
-  secretKey: your_secure_secret_key 
+  secretKey: your_secure_secret_key  
