--- a/music-site/values.yaml
+++ b/music-site/values.yaml
@@ -1,24 +1,16 @@
 namespace: music-site
+
 mongodb:
   image:
-<<<<<<< HEAD
     repository: mongo
-    tag: "1.0.27"
-=======
-    repository: mongo # Use the official MongoDB image
-    tag: "1.0.27"
->>>>>>> d92cf9340428769e3043ebbd25728cbf3c0befbb
+    tag: "6.0" # Updated to a valid MongoDB version
   replicas: 1
   storage:
-    size: 5Gi
+    size: "5Gi"
+
 app:
   image:
-<<<<<<< HEAD
     repository: cheffen/music-site
-    tag: "1.0.27"
-=======
-    repository: cheffen/music-site # Your application image repository
-    tag: "1.0.27"
->>>>>>> d92cf9340428769e3043ebbd25728cbf3c0befbb
+    tag: "1.0.13" # Application image tag remains unchanged
   replicas: 2
-  secretKey: your_secure_secret_key  
+  secretKey: "your_secure_secret_key"
