--- a/music-site/values.yaml
+++ b/music-site/values.yaml
@@ -3,7 +3,7 @@ namespace: music-site
 mongodb:
   image:
     repository: mongo
-    tag: "1.0.31"
+    tag: "6.0" # Updated to a valid MongoDB version
   replicas: 1
   storage:
     size: "5Gi"
